testing-logs/cxx-client-testing-log
cd c++/web_tutorial_mastercopy; make testing;
make[1]: Entering directory '/home/bridges-testing/bridges-client-testing/c++/web_tutorial_mastercopy'
unifdef -DTESTING=1 -o ../web_tutorial_testing/cancer_snippet.cpp cancer_snippet.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/minimal_game.cpp minimal_game.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/osm.cpp osm.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/bst.cpp bst.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/array2d.cpp array2d.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/array1d.cpp array1d.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/tree.cpp tree.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/mnt_path.cpp mnt_path.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/input_game.cpp input_game.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/array3d.cpp array3d.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/circ_sllist.cpp circ_sllist.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/wikidata_actor_snippet.cpp wikidata_actor_snippet.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/guttenberg_snippet.cpp guttenberg_snippet.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/circ_dllist.cpp circ_dllist.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/osm_snippet.cpp osm_snippet.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/graph_alist.cpp graph_alist.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/avl.cpp avl.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/bintree.cpp bintree.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/game_snippet.cpp game_snippet.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/face_shp_coll.cpp face_shp_coll.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/osm_oldstyle.cpp osm_oldstyle.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/vis_example.cpp vis_example.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/display_game.cpp display_game.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/shape_collection.cpp shape_collection.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/dllist.cpp dllist.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/shakespeare_snippet.cpp shakespeare_snippet.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/mllist.cpp mllist.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/imdb_snippet.cpp imdb_snippet.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/kdt.cpp kdt.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/eq_snippet.cpp eq_snippet.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/color_grid.cpp color_grid.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/song_lyrics_snippet.cpp song_lyrics_snippet.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/sllist.cpp sllist.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/elevation_snippet.cpp elevation_snippet.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/linechart.cpp linechart.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/graph_amatrix.cpp graph_amatrix.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/lyrics_snippet.cpp lyrics_snippet.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/array_test.cpp array_test.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/audio_clip.cpp audio_clip.cpp ; [ $? != 2 ]
unifdef -DTESTING=1 -o ../web_tutorial_testing/StudentInfo.h StudentInfo.h; [ $? != 2 ]
make[1]: Leaving directory '/home/bridges-testing/bridges-client-testing/c++/web_tutorial_mastercopy'
cd c++/web_tutorial_testing; make; make run;
make[1]: Entering directory '/home/bridges-testing/bridges-client-testing/c++/web_tutorial_testing'
g++ -g -o array1d array1d.cpp -g -I/home/bridges-testing/bridges-cxx-install/include  -I/  -I/ -DTESTING=1 -std=c++14 -L /home/bridges-testing/bridges-cxx-install/lib -L/  -lcurl -l pthread -l bridges
g++ -g -o array2d array2d.cpp -g -I/home/bridges-testing/bridges-cxx-install/include  -I/  -I/ -DTESTING=1 -std=c++14 -L /home/bridges-testing/bridges-cxx-install/lib -L/  -lcurl -l pthread -l bridges
g++ -g -o array3d array3d.cpp -g -I/home/bridges-testing/bridges-cxx-install/include  -I/  -I/ -DTESTING=1 -std=c++14 -L /home/bridges-testing/bridges-cxx-install/lib -L/  -lcurl -l pthread -l bridges
g++ -g -o array_test array_test.cpp -g -I/home/bridges-testing/bridges-cxx-install/include  -I/  -I/ -DTESTING=1 -std=c++14 -L /home/bridges-testing/bridges-cxx-install/lib -L/  -lcurl -l pthread -l bridges
g++ -g -o audio_clip audio_clip.cpp -g -I/home/bridges-testing/bridges-cxx-install/include  -I/  -I/ -DTESTING=1 -std=c++14 -L /home/bridges-testing/bridges-cxx-install/lib -L/  -lcurl -l pthread -l bridges
g++ -g -o avl avl.cpp -g -I/home/bridges-testing/bridges-cxx-install/include  -I/  -I/ -DTESTING=1 -std=c++14 -L /home/bridges-testing/bridges-cxx-install/lib -L/  -lcurl -l pthread -l bridges
g++ -g -o bintree bintree.cpp -g -I/home/bridges-testing/bridges-cxx-install/include  -I/  -I/ -DTESTING=1 -std=c++14 -L /home/bridges-testing/bridges-cxx-install/lib -L/  -lcurl -l pthread -l bridges
g++ -g -o bst bst.cpp -g -I/home/bridges-testing/bridges-cxx-install/include  -I/  -I/ -DTESTING=1 -std=c++14 -L /home/bridges-testing/bridges-cxx-install/lib -L/  -lcurl -l pthread -l bridges
g++ -g -o cancer_snippet cancer_snippet.cpp -g -I/home/bridges-testing/bridges-cxx-install/include  -I/  -I/ -DTESTING=1 -std=c++14 -L /home/bridges-testing/bridges-cxx-install/lib -L/  -lcurl -l pthread -l bridges
g++ -g -o circ_dllist circ_dllist.cpp -g -I/home/bridges-testing/bridges-cxx-install/include  -I/  -I/ -DTESTING=1 -std=c++14 -L /home/bridges-testing/bridges-cxx-install/lib -L/  -lcurl -l pthread -l bridges
circ_dllist.cpp: In function ‘int main(int, char**)’:
circ_dllist.cpp:49:25: error: ‘CircDLelement_listhelper’ is not a member of ‘bridges::datastructure::CircDLelement<std::__cxx11::basic_string<char> >’
  CircDLelement<string>::CircDLelement_listhelper list(el0);
                         ^~~~~~~~~~~~~~~~~~~~~~~~
circ_dllist.cpp:50:17: error: ‘list’ was not declared in this scope
     auto iter = list.begin();
                 ^~~~
circ_dllist.cpp:50:17: note: ‘std::list’ is defined in header ‘<list>’; did you forget to ‘#include <list>’?
circ_dllist.cpp:8:1:
+#include <list>
 #include <string>
circ_dllist.cpp:50:17:
     auto iter = list.begin();
                 ^~~~
make[1]: *** [Makefile:40: circ_dllist] Error 1
make[1]: Leaving directory '/home/bridges-testing/bridges-client-testing/c++/web_tutorial_testing'
make[1]: Entering directory '/home/bridges-testing/bridges-client-testing/c++/web_tutorial_testing'
g++ -g -o circ_dllist circ_dllist.cpp -g -I/home/bridges-testing/bridges-cxx-install/include  -I/  -I/ -DTESTING=1 -std=c++14 -L /home/bridges-testing/bridges-cxx-install/lib -L/  -lcurl -l pthread -l bridges
circ_dllist.cpp: In function ‘int main(int, char**)’:
circ_dllist.cpp:49:25: error: ‘CircDLelement_listhelper’ is not a member of ‘bridges::datastructure::CircDLelement<std::__cxx11::basic_string<char> >’
  CircDLelement<string>::CircDLelement_listhelper list(el0);
                         ^~~~~~~~~~~~~~~~~~~~~~~~
circ_dllist.cpp:50:17: error: ‘list’ was not declared in this scope
     auto iter = list.begin();
                 ^~~~
circ_dllist.cpp:50:17: note: ‘std::list’ is defined in header ‘<list>’; did you forget to ‘#include <list>’?
circ_dllist.cpp:8:1:
+#include <list>
 #include <string>
circ_dllist.cpp:50:17:
     auto iter = list.begin();
                 ^~~~
make[1]: *** [Makefile:40: circ_dllist] Error 1
make[1]: Leaving directory '/home/bridges-testing/bridges-client-testing/c++/web_tutorial_testing'
make: *** [Makefile:21: make_c++] Error 2
